# RoyalTDN

./: .env.example  .gitignore  01_introduccion_y_vision_general.md  02_principios_fundamentales_bot_rentable.md  03_stack_tecnologico_detallado.md  04_ruta_implementacion_fase0_fase1.md  05_ruta_implementacion_fase2_fase3.md  06_ruta_implementacion_fase4_y_codigos_ejemplo.md  07_herramientas_enlaces_y_conclusion.md  AGENTS.md  Dockerfile  Makefile  README.md  config.yaml  conftest.py  docker-compose.yml  guia.md  pyproject.toml  run.py  run_20min.sh  run_20min_v2.sh  run_bot_20min.sh  run_bot_bg.sh
.atl/: .skill-registry.cache.json  skill-registry.md
cache/: ADAUSDT_1d.parquet  ADAUSDT_30m.parquet  BTCUSDT_15m.parquet  BTCUSDT_1d.parquet  BTCUSDT_30m.parquet  ETHUSDT_15m.parquet  ETHUSDT_1d.parquet  ETHUSDT_30m.parquet  LINKUSDT_1d.parquet  LINKUSDT_30m.parquet  SOLUSDT_15m.parquet  SOLUSDT_1d.parquet  SOLUSDT_30m.parquet
cells/: base.py
core/: bus.py  engine.py  journal.py  registry.py
data/: historical.py
execution/: binance_broker.py
inference/: conditions.py  graph.py
monitoring/: dashboard.py  telegram_alerts.py
notebooks/: 01_primer_backtest.ipynb  02_walkforward_backtest.ipynb  run_wfa.py
openspec/: config.yaml
reports/: sma_wfa_report.html
requirements/: fase0.txt  fase2.txt  fase3.txt  fase4.txt  fase6.txt  fase7.txt  fase8_console.txt
risk/: manager.py  portfolio.py
royaltdn_crypto/: config.yaml
scripts/: backtest.py  optimize.py  quick_backtest.py
tests/: smoke_backtest.py  test_alpaca_broker.py  test_backtesting.py  test_cell.py  (+46 more)
(+313 files in other folders)
